@@ -3,6 +3,7 @@ package com.chibao.edu.elastic.index.client.service.impl;
 import com.chibao.edu.elastic.index.client.repository.TwitterElasticsearchIndexRepository;
 import com.chibao.edu.elastic.index.client.service.ElasticIndexClient;
 import com.chibao.edu.elastic.model.index.impl.TwitterIndexModel;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
@@ -12,21 +13,19 @@ import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 @ConditionalOnProperty(name = "elastic-config.is-repository", havingValue = "true", matchIfMissing = true)
 public class TwitterElasticRepositoryIndexClient implements ElasticIndexClient<TwitterIndexModel> {
 
-
     private final TwitterElasticsearchIndexRepository twitterElasticsearchIndexRepository;
 
-    public TwitterElasticRepositoryIndexClient(TwitterElasticsearchIndexRepository indexRepository) {
-        this.twitterElasticsearchIndexRepository = indexRepository;
-    }
+
 
     @Override
     public List<String> save(List<TwitterIndexModel> documents) {
         List<TwitterIndexModel> repositoryResponse =
                 (List<TwitterIndexModel>) twitterElasticsearchIndexRepository.saveAll(documents);
-        List<String> ids = repositoryResponse.stream().map(TwitterIndexModel::getId).collect(Collectors.toList());
+        List<String> ids = repositoryResponse.stream().map(TwitterIndexModel::getId).toList();
         log.info("Documents indexed successfully with type: {} and ids: {}", TwitterIndexModel.class.getName(), ids);
         return ids;
     }
